@@ -2,6 +2,7 @@ version 0.99.4-rc - 22-Jun-2010
  . [NEW] Templates: BaseSDK 4.0. Deploy OS Target: 3.0
  . [FIX] CCArray: Internally uses CCARRAY_FOREACH
  . [FIX] Removed artifacts from PageTurnTransition (issue #751)
+ . [FIX] Templates: calls Director#purgeCachedData on memory warning
  . [FIX] Texture2D: JPEG images are displayed correctly in iOS4 (issue #886)
 
 version 0.99.4-rc - 22-Jun-2010
